增加postgresql服务脚本的使用

--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -1,7 +1,5 @@
 # 第 17.8 节 PostgreSQL 与 pgAdmin4
 
-
-
 PostgreSQL 是一款自由的对象 - 关系型数据库，最早发布于 1989 年 6 月。在 FreeBSD 上，提供多个大版本可选。在多方面均优于 mysql。
 
 ## postgresql 安装示例（6 个版本均如此）
@@ -111,7 +109,6 @@ root@ykla:~ #
 # service postgresql enable
 ```
 
-
 ### 初始化数据库
 
 ```sh
@@ -197,6 +194,164 @@ GRANT
 postgres=# q
 $exit
 root@ykla:~ #
+```
+
+## 深入 postgresql 服务管理
+
+### 初始化建议
+
+初始化数据库建议是使用 `service postgresql initdb`，这是最简便的方式。 但是里面还是有一些技巧可用。
+
+这里讲如何使用 `postgresql_initdb_flags` rc 脚本参数。
+
+`postgresql_initdb_flags` 参数,默认是`"--encoding=utf-8 --lc-collate=C"`,意义一目了然，不作解释
+
+。建议用 sysrc 设置如下：
+
+```
+sysrc postgresql_initdb_flags="--encoding=utf-8 --lc-collate=C -A scram-sha-256 -W"
+```
+
+`-A scram-sha-256` 用于指定默认的认证方法，不使用的话 `pg_hba.conf` 中默认认证方法为trust，即无密码登录
+
+`-W` 用于在初始化时要求设置 postgres 用户密码，这样不用登录后在设置密码。
+
+这样可以简化一些初始化工作。同样也可以利用 `postgresql_initdb_flags` 参数灵活控制初始化工作。
+
+### 管理多个数据库实例(集簇)
+
+PostgreSql 允许在一台机器上运行多个实例，这在测试不同配置，隔离环境时非常有用。
+
+管理多个数据库实例的工具在 Debian/Ubuntu 系统上常用的是 `pg_ctlcluster`,这是一个 `pg_ctl` 的封装。
+
+FreeBSD 上并没有这个工具，但 FreeBSD 上 PostgreSQL 的 rc 脚本封装了这些管理功能，使用起来也很方便。
+
+下面将建立两个命名实例，分别为: main, dev。
+
+#### 配置实例
+
+```
+sysrc postgresql_profiles+=main  # 增加一个 main 实例
+sysrc postgresql_profiles+=dev  # 增加一个 dev 实例
+# 当然可以直接 sysrc postgresql_profiles="main dev"
+sysrc postgresql_main_data=/var/db/postgres/main  # 对应 main 实例数据目录
+sysrc postgresql_dev_data=/var/db/postgres/dev  # 对应 dev 实例数据目录
+# 必须为每个实例设置数据目录
+# 以上为必须
+sysrc postgresql_main_initdb_flags="-E utf-8 -A scram-sha-256 --lc-collate C -W"
+# 为 main 实例设置初始化参数，dev 实例默认初始化，作一对比
+sysrc postgresql_main_enable=YES
+sysrc postgresql_dev_enable=YES
+# 为每个实例设置启用或关闭
+```
+
+说明：
+
+1. 把实例名放入 rc 参数名中，就是对应实例的参数名。
+2. `postgresql_data`,`postgresql_enable` 等参数还是可以使用，这时这些参数作为实例对应参数的默认值使用，在找不到实例参数时使用。
+3. 管理多个实例时，建议只使用实例名相关的参数，不去使用没有实例名的参数。好处是清晰明确，控制上也灵活，不同实例可以有不同设置。
+
+#### 初始化实例目录
+
+```
+service postgresql initdb
+```
+
+这会初始化两个数据库实例。
+
+也可以在命令最后指定实例名分别进行初始化，在新增实例时使用这种方法：
+
+```
+service postgresql initdb main
+service postgresql initdb dev
+```
+
+**注意:** 两个不同的实例必须运行在不同的端口上，所以需要修改对应实例的端口号
+
+这里 main 实例使用默认的5432端口，不作修改；dev 实例使用5433端口，修改对应配置文件
+
+修改 `/var/db/postgres/dev/postgresql.conf`,找到 port 行，修改如下：
+
+```
+port = 5433
+```
+
+#### 启动停止和重启
+
+```
+service postgresql start
+service postgresql status
+service postgresql restart
+service postgresql stop
+```
+
+以上针对所有实例进行。操作示例如下：
+
+```
+# service postgresql start
+===> postgresql profile: main 
+start postgresql
+===> postgresql profile: dev
+start postgresql
+# service postgresql status
+===> postgresql profile: main
+status postgresql
+pg_ctl: server is running (PID: 2624)
+/s/usr/local/bin/postgres "-D" "/var/db/postgres/main"
+===> postgresql profile: dev
+status postgresql
+pg_ctl: server is running (PID: 2641)
+/s/usr/local/bin/postgres "-D" "/var/db/postgres/dev"
+# service postgresql restart
+===> postgresql profile: main
+restart postgresql
+===> postgresql profile: dev
+restart postgresql
+# service postgresql status
+===> postgresql profile: main
+status postgresql
+pg_ctl: server is running (PID: 2685)
+/s/usr/local/bin/postgres "-D" "/var/db/postgres/main"
+===> postgresql profile: dev
+status postgresql
+pg_ctl: server is running (PID: 2701)
+/s/usr/local/bin/postgres "-D" "/var/db/postgres/dev"
+# service postgresql stop
+===> postgresql profile: main
+stop postgresql
+===> postgresql profile: dev
+stop postgresql
+# service postgresql status
+===> postgresql profile: main
+status postgresql
+pg_ctl: no server running
+===> postgresql profile: dev
+status postgresql
+pg_ctl: no server running
+```
+
+可以指定实例名单独操作:
+
+```
+service postgresql start dev
+service postgresql restart dev
+service postgresql status dev
+service postgresql stop dev
+```
+
+输出示例如下：
+
+```
+# service postgresql start dev
+start postgresql
+# service postgresql status dev
+status postgresql
+pg_ctl: server is running (PID: 2807)
+/s/usr/local/bin/postgres "-D" "/var/db/postgres/dev"
+# service postgresql restart dev
+restart postgresql
+# service postgresql stop dev
+stop postgresql
 ```
 
 ## 安装 pgAdmin4
