--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -204,7 +204,7 @@ root@ykla:~ #
 
 这里讲如何使用 `postgresql_initdb_flags` rc 脚本参数。
 
-`postgresql_initdb_flags` 参数,默认是`"--encoding=utf-8 --lc-collate=C"`,意义一目了然：指定编码为 UTF-8，语言为 C，即实质上是英语 ASCII 编码。
+`postgresql_initdb_flags` 参数,默认是`"--encoding=utf-8 --lc-collate=C"`。意义一目了然：指定编码为 UTF-8，语言为 C，即实质上是英语 ASCII 编码。
 
 。建议用 sysrc 设置如下：
 
