--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -2,7 +2,7 @@
 
 PostgreSQL 是一款自由的对象 - 关系型数据库，最早发布于 1989 年 6 月。在 FreeBSD 上，提供多个大版本可选。在多方面均优于 mysql。
 
-## postgresql 安装示例（6 个版本均如此）
+## PostgreSQL 安装示例（6 个版本均如此）
 
 ### 安装
 
@@ -196,7 +196,7 @@ $exit
 root@ykla:~ #
 ```
 
-## 深入 postgresql 服务管理
+## 深入 PostgreSQL 服务管理
 
 ### 初始化建议
 
