--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -1,6 +1,6 @@
 # 第 17.8 节 PostgreSQL 与 pgAdmin4
 
-PostgreSQL 是一款自由的对象关系型数据库（Object-Relational Database，ORDB）。PostgreSQL 最早发布于 1989 年 6 月。在 FreeBSD 上，有多个版本可选。在多方面均优于 MySQL。
+PostgreSQL 是一款自由的对象关系型数据库（Object-Relational Database，ORDB）。PostgreSQL 最早发布于 1989 年 6 月。在 FreeBSD 上，有多个版本可选。在吞吐量、源代码清晰度、平均耗时等多方面均优于 MySQL。
 
 ## PostgreSQL 安装示例（6 个版本均如此）
 
