--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -2,6 +2,8 @@
 
 PostgreSQL 是一款自由的对象关系型数据库（Object-Relational Database，ORDB）。PostgreSQL 最早发布于 1989 年 6 月。在 FreeBSD 上，有多个版本可选。在吞吐量、源代码清晰度、平均耗时等多方面均优于 MySQL。
 
+值得一提的是，PostgreSQL 也渊源于加州大学伯克利分校。PostgreSQL 的许可证是 [PostgreSQL 许可证](https://www.postgresql.org/about/licence/)，与 BSDL 类似。
+
 ## PostgreSQL 安装示例（6 个版本均如此）
 
 ### 安装
