--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -22,15 +22,14 @@ PostgreSQL 是一款自由的对象关系型数据库（Object-Relational Databa
 查看安装后配置
 
 ```sh
-root@ykla:~ # pkg info -D postgresql16-server
-postgresql16-server-16.7_1:
-On install:
 For procedural languages and postgresql functions, please note that
 you might have to update them when updating the server.
+# 如果你使用了过程语言或 PostgreSQL 函数，更新服务器时可能也需要同步更新它们。
 
 If you have many tables and many clients running, consider raising
 kern.maxfiles using sysctl(8), or reconfigure your kernel
 appropriately.
+# 如果你有大量表和客户端，建议使用 sysctl 提升 kern.maxfiles，或者重新配置内核参数。
 
 The port is set up to use autovacuum for new databases, but you might
 also want to vacuum and perhaps backup your database regularly. There
@@ -39,48 +38,65 @@ you may find useful. You can use it to backup and perform vacuum on all
 databases nightly. Per default, it performs `vacuum analyze'. See the
 script for instructions. For autovacuum settings, please review
 ~postgres/data/postgresql.conf.
+# 端口默认对新数据库启用了 autovacuum，但你仍然应该定期手动 vacuum 和备份。
+# 有一个每日脚本 /usr/local/etc/periodic/daily/502.pgsql 可以用来每晚备份和 vacuum 所有数据库。
+# 默认执行 `vacuum analyze`，具体可查阅脚本。autovacuum 的设置请查看 postgresql.conf。
 
 If you plan to access your PostgreSQL server using ODBC, please
 consider running the SQL script /usr/local/share/postgresql/odbc.sql
 to get the functions required for ODBC compliance.
+# 若你打算通过 ODBC 访问 PostgreSQL，请运行 odbc.sql 脚本以安装所需的兼容函数。
 
 Please note that if you use the rc script,
 /usr/local/etc/rc.d/postgresql, to initialize the database, unicode
 (UTF-8) will be used to store character data by default.  Set
 postgresql_initdb_flags or use login.conf settings described below to
 alter this behaviour. See the start rc script for more info.
+# 如果你用 rc 脚本初始化数据库，会默认使用 UTF-8 编码存储字符数据。
+# 你可以通过设置 postgresql_initdb_flags 或 login.conf 来改变这个行为，详见 rc 脚本说明。
 
 To set limits, environment stuff like locale and collation and other
 things, you can set up a class in /etc/login.conf before initializing
 the database. Add something similar to this to /etc/login.conf:
+# 如果你需要设置资源限制、语言环境、排序规则等初始化参数，可以预先在 /etc/login.conf 里定义一个登录类。
+Add something similar to this to /etc/login.conf:
 ---
 postgres:\
 	:lang=en_US.UTF-8:\
 	:setenv=LC_COLLATE=C:\
 	:tc=default:
 ---
+# 示例登录类设置，定义了语言和排序规则。
+
 and run `cap_mkdb /etc/login.conf'.
 Then add 'postgresql_login_class="postgres"' to /etc/rc.conf, or
 set it as the postgres user's login class in /etc/passwd.
+# 添加完登录类后运行 cap_mkdb 生效，并在 /etc/rc.conf 设置 postgresql_login_class。
+# 或者直接在 /etc/passwd 中为 postgres 用户指定此登录类。
 
 ======================================================================
 
 To use PostgreSQL, enable it in rc.conf using
 
   sysrc postgresql_enable=yes
+# 启用 PostgreSQL 服务。
 
 To initialize the database, run
 
   service postgresql initdb
+# 初始化数据库。
 
 You can then start PostgreSQL by running:
 
   service postgresql start
+# 启动 PostgreSQL 服务。
 
 For postmaster settings, see ~postgres/data/postgresql.conf
+# postmaster 设置在 postgresql.conf 中。
 
 NB. FreeBSD's PostgreSQL port logs to syslog by default
     See ~postgres/data/postgresql.conf for more info
+# PostgreSQL 在 FreeBSD 上默认通过 syslog 记录日志，详见 postgresql.conf。
 
 NB. If you're not using a checksumming filesystem like ZFS, you might
     wish to enable data checksumming. It can be enabled during
@@ -88,10 +104,14 @@ NB. If you're not using a checksumming filesystem like ZFS, you might
     the postgresql_initdb_flags rcvar. Otherwise you can enable it later by
     using pg_checksums.  Check the initdb(1) manpage for more info
     and make sure you understand the performance implications.
+# 如果你不使用像 ZFS 这样的具备校验和的文件系统，建议开启 PostgreSQL 的数据校验功能。
+# 你可以在 initdb 阶段用 --data-checksums 启用，或之后用 pg_checksums 工具开启。
+# 请参考 initdb 手册并理解它可能带来的性能影响。
 
 ======================================================================
 
 SECURITY ADVICE
+# 安全建议
 
 If upgrading from a version 16.x < 16.3
 A security vulnerability was found in the system views pg_stats_ext
@@ -100,9 +120,9 @@ users to see data they shouldn't.  If this is of concern in your
 installation, run the SQL script /usr/local/share/postgresql/fix-CVE-2024-4317.sql
 for each of your databases. For details, see
 https://www.postgresql.org/support/security/CVE-2024-4317/
-
-root@ykla:~ #
-
+# 如果你从 16.3 以下版本升级，pg_stats_ext 和 pg_stats_ext_exprs 有安全漏洞，可能导致认证用户看到不该看的数据。
+# 若你关心此问题，请对每个数据库执行 fix-CVE-2024-4317.sql。
+# 详情见官方公告：https://www.postgresql.org/support/security/CVE-2024-4317/
 ```
 
 ### 加入启动项
