--- a/di-16-zhang-fu-wu-qi/16.3-gitlab-ee.md
+++ b/di-16-zhang-fu-wu-qi/16.3-gitlab-ee.md
@@ -22,25 +22,34 @@
 gitlab-ee-17.8.2_1:
 On install:
 Gitlab was installed successfully.
+# GitLab 已成功安装。
 
 You now need to set up the various components of Gitlab, so please
 follow the instructions in the guide at:
 
 https://gitlab.com/mfechner/freebsd-gitlab-docu/blob/master/install/17.8-freebsd.md
+# 接下来你需要配置 GitLab 的各个组件。
+# 请参考上面的 FreeBSD 安装指南链接进行设置。
 
 On upgrade from gitlab-ee<11.9.7:
 !! WARNING: Please make sure you read in UPDATING entry 20190423 !!
+# 如果你从低于 11.9.7 的旧版本升级，
+# 请务必阅读 FreeBSD ports 树中 `UPDATING` 文件中 20190423 的条目！
 
 On upgrade:
 If you just installed an major upgrade of GitLab, for example you
 switched from 17.5.x to 17.6.x, please follow the instructions in the guide at:
 
 https://gitlab.com/mfechner/freebsd-gitlab-docu/blob/master/update/17.7-17.8-freebsd.md
+# 如果你进行了主版本升级（例如从 17.5.x 升级到 17.6.x），
+# 请按照上面链接的升级指南进行操作。
 
 If you just installed an minor upgrade of GitLab please follow
 the instructions in the guide at:
 
 https://gitlab.com/mfechner/freebsd-gitlab-docu/blob/master/update/freebsd_patch_versions.md
+# 如果只是进行了小版本升级（例如从 17.8.1 升级到 17.8.2），
+# 请参阅上面的补丁版本更新指南。
 ```
 
 开发者已经写好了安装说明，<https://gitlab.com/mfechner/freebsd-gitlab-docu/blob/master/install/17.8-freebsd.md>
@@ -112,9 +121,13 @@ redis-7.4.2:
 On install:
 To setup "redis" you need to edit the configuration file:
       /usr/local/etc/redis.conf
+# 要配置 Redis，你需要编辑配置文件：
+# /usr/local/etc/redis.conf
 
       To run redis from startup, add redis_enable="YES"
       in your /etc/rc.conf.
+# 要使 Redis 在系统启动时自动运行，需在 /etc/rc.conf 文件中添加以下行：
+# redis_enable="YES"
 ```
 
 ### 配置 socket
