--- a/di-16-zhang-fu-wu-qi/di-16.9-jie-webmin.md
+++ b/di-16-zhang-fu-wu-qi/di-16.9-jie-webmin.md
@@ -21,15 +21,20 @@ webmin-2.013:
 On install:
 After installing Webmin for the first time you should perform the following
 steps as root:
+# 安装 Webmin 后，作为 root 用户执行以下步骤：
 
 * Configure Webmin by running /usr/local/lib/webmin/setup.sh
+# 通过运行 /usr/local/lib/webmin/setup.sh 来配置 Webmin。
 
 * Add webmin_enable="YES" to your /etc/rc.conf
+# 在 /etc/rc.conf 文件中添加 webmin_enable="YES" 使 Webmin 在启动时自动运行。
 
 * Start Webmin for the first time by running "service webmin start"
+# 第一次启动 Webmin 时，运行 "service webmin start" 来启动它。
 
 The parameters requested by setup.sh may then be changed from within Webmin
 itself.
+# 通过 setup.sh 配置的参数之后可以在 Webmin 界面中进行更改。
 ```
 
 ## 配置
