--- a/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.11-mongodb.md
@@ -22,12 +22,21 @@ On install:
 MongoDB on Raspberry Pi can work but is unsupported upstream.
 Please read https://jira.mongodb.org/browse/SERVER-71772 and enable option
 ARMV80A if you run this on a non-LSE ARM cpu like Raspberry Pi 4.
+# MongoDB 在 Raspberry Pi 上可以运行，但官方不支持。
+# 请阅读 https://jira.mongodb.org/browse/SERVER-71772 并在 Raspberry Pi 4 等非 LSE ARM CPU 上启用 ARMV80A 选项。
 
 MongoDB 6.0 and up do not include the 'mongo' CLI shell anymore. You can
 use the MongoDB Shell (https://github.com/mongodb-js/mongosh).
+# MongoDB 6.0 及更高版本不再包括 'mongo' CLI shell。
+# 你可以使用 MongoDB Shell（https://github.com/mongodb-js/mongosh）。
+
 # pkg install npm
 $ npm install mongosh
 $ npx mongosh mongodb://127.0.0.1:27017/
+# 安装 npm 并使用以下命令安装 mongosh：
+# $ npm install mongosh
+# 然后使用 npx 启动 mongosh 连接到本地 MongoDB 实例：
+# $ npx mongosh mongodb://127.0.0.1:27017/
 ```
 
 ## 服务
