--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.3-jie-php-8.x.md
@@ -77,17 +77,21 @@ On install:
 
 Consider switching to php-fpm and mod_fast_cgi as per Apache httpd project
 recommendation. See https://cwiki.apache.org/confluence/display/HTTPD/PHP-FPM
+建议根据 Apache httpd 项目的推荐，切换到 php-fpm 和 mod_fast_cgi。详情请见 https://cwiki.apache.org/confluence/display/HTTPD/PHP-FPM
 
 ******************************************************************************
 
 If you are building PHP-based ports in poudriere(8) or Synth with ZTS enabled,
 add WITH_MPM=event to /etc/make.conf to prevent build failures.
+如果你在 poudriere(8) 或 Synth 中构建启用了 ZTS 的 PHP 基础端口，请将 WITH_MPM=event 添加到 /etc/make.conf，以防止构建失败。
 
 ******************************************************************************
 
 Make sure index.php is part of your DirectoryIndex.
+确保 index.php 是 DirectoryIndex 的一部分。
 
 You should add the following to your Apache configuration file:
+你应该将以下内容添加到你的 Apache 配置文件中：
 
 <FilesMatch "\.php$">
     SetHandler application/x-httpd-php
