--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.5-jie-mysql-8.x.md
@@ -40,18 +40,29 @@ root@ykla:~ # pkg info -D mysql84-server
 mysql84-server-8.4.3_1:
 On install:
 There is no initial password for first time use of MySQL. # 即无密码
+首次使用 MySQL 时没有初始密码。# 即无密码
 Keep in mind to reset it to a secure password.
+记得将其重置为一个安全的密码。
 
 MySQL 8.4 has a default /usr/local/etc/mysql/my.cnf,
 remember to replace it with your own
 or set `mysql_optfile="$YOUR_CNF_FILE` in rc.conf.
+MySQL 8.4 有一个默认的 /usr/local/etc/mysql/my.cnf，
+记得用你自己的文件替换它，
+或者在 rc.conf 中设置 `mysql_optfile="$YOUR_CNF_FILE`。
 
 On upgrade:
 As of MySQL 8.0.16, the MySQL server performs the upgrade tasks previously
 handled by mysql_upgrade. Consequently, mysql_upgrade is unneeded and is
 deprecated as of that version, and will be removed in a future MySQL version.
+从 MySQL 8.0.16 开始，MySQL 服务器执行以前由 mysql_upgrade 处理的升级任务。
+因此，mysql_upgrade 不再需要，并且从该版本开始被弃用，
+将在未来的 MySQL 版本中移除。
+
 Because mysql_upgrade no longer performs upgrade tasks,
 it exits with status 0 unconditionally.
+因为 mysql_upgrade 不再执行升级任务，
+它无条件地以状态 0 退出。
 ```
 
 ## 启动服务
