--- a/di-20-zhang-yu-le-yu-jiao-yu/20.6-minecraft.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/20.6-minecraft.md
@@ -73,17 +73,22 @@ $ java -jar HMCL*.jar
 - 查看配置信息：
 
 ```sh
-root@ykla:/usr/ports/games/minecraft-server # pkg info -D minecraft-server
+# pkg info -D minecraft-server
 minecraft-server-1.21.1:
 On install:
 When you first run minecraft-server, it will populate the file
 /usr/local/etc/minecraft-server/eula.txt
+首次运行 minecraft-server 时，它会生成文件 /usr/local/etc/minecraft-server/eula.txt
 
 It is required to read the EULA, and then set eula=true
+需要阅读 EULA，然后将 eula=true 设置为已接受。
 
 - Configuration files can be found in /usr/local/etc/minecraft-server/
+- 配置文件可以在 /usr/local/etc/minecraft-server/ 找到
 - Log and debug output files can be found in /var/log/minecraft-server/
+- 日志和调试输出文件可以在 /var/log/minecraft-server/ 找到
 - World files can be found in /var/db/minecraft-server/
+- 世界文件可以在 /var/db/minecraft-server/ 找到
 
 Without daemon option:
 - To run the server, run /usr/local/bin/minecraft-server # 运行方法
@@ -97,11 +102,17 @@ Without daemon option:
 
 With daemon option:
 - The service has been installed with the name 'minecraft'
-- To adjust maximum memory usage (-Xmx), use minecraft_memx= in /etc/rc.conf  # 指定最大内存占用
-- To adjust initial memory usage (-Xms), use minecraft_mems= in /etc/rc.conf # 指定初始化内存占用
-- To add other java parameters, use minecraft_args= in /etc/rc.conf # 指定初始化参数
-- To run with a specific version of Java, use minecraft_java_version= in /etc/rc.conf # 指定某一 java 版本
+- 服务已安装，名称为 'minecraft'
+- To adjust maximum memory usage (-Xmx), use minecraft_memx= in /etc/rc.conf  
+- 要调整最大内存使用量 (-Xmx)，请在 /etc/rc.conf 中使用 minecraft_memx=
+- To adjust initial memory usage (-Xms), use minecraft_mems= in /etc/rc.conf 
+- 要调整初始内存使用量 (-Xms)，请在 /etc/rc.conf 中使用 minecraft_mems=
+- To add other java parameters, use minecraft_args= in /etc/rc.conf
+- 要添加其他 java 参数，请在 /etc/rc.conf 中使用 minecraft_args=
+- To run with a specific version of Java, use minecraft_java_version= in /etc/rc.conf 
+- 要使用特定版本的 Java，请在 /etc/rc.conf 中使用 minecraft_java_version=
 - To see the interactive console, type service minecraft console
+- 要查看交互式控制台，请输入 service minecraft console
 ```
 
 ```sh
