--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -229,13 +229,16 @@ public class HelloWorld {
 
 
 ```sh
-root@ykla:~ # pkg info -D intellij-ultimate
+# pkg info -D intellij-ultimate
 intellij-ultimate-2024.3.1.1:
 On install:
 There is a native (faster) file watching support backed by kqueue which is
 enabled by default.  If you encounter problems with watching large
 trees, you can disable it by adding the following property via the menu
 entry Help -> Edit Custom Properties...
+
+      idea.filewatcher.disabled=true
+有一个由 kqueue 支持的本地（更快的）文件监视功能，默认启用。如果你在监视大的文件树时遇到问题，可以通过菜单项 Help -> Edit Custom Properties... 添加以下属性来禁用它：
 
       idea.filewatcher.disabled=true
 ```
