--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -75,7 +75,7 @@ set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main
 ### 查看安装后说明
 
 ```sh
-root@ykla:/home/ykla # pkg info -D zsh
+# pkg info -D zsh
 zsh-5.9_5:
 On install:
 ==========================================================
@@ -85,22 +85,39 @@ By default, zsh looks for system-wide defaults in
 
 If you previously set up /etc/zprofile, /etc/zshenv, etc.,
 either move them to /usr/local/etc or rebuild zsh with the
-ETCDIR option enabled. # 如果之前在其他 shell 有任何配置，需要转移格式到 ~/.zshrc
+ETCDIR option enabled. 
 
 ==========================================================
 root@ykla:/home/ykla # pkg info -D zsh-autosuggestions
+默认情况下，zsh 会在 /usr/local/etc 中查找系统范围的默认设置。
+
+如果你之前设置了 /etc/zprofile、/etc/zshenv 等，
+要么将它们移到 /usr/local/etc，要么在启用 ETCDIR 选项的情况下重新构建 zsh。
+
+==========================================================
+```
+
+```sh
+# pkg info -D zsh-autosuggestions
 zsh-autosuggestions-0.7.1:
 On install:
 Add the line below to your .zshrc to enable auto suggestions.
 
-source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh # 要求加入此行到 ~/.zshrc
+source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh 
+安装时：
+将以下行添加到你的 .zshrc 文件中以启用自动建议。
 
-root@ykla:/home/ykla # pkg info -D zsh-syntax-highlighting
+source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh 
+
 zsh-syntax-highlighting-0.8.0,1:
 On install:
 Add the line below to *the end of* your .zshrc to enable highlighting.
 
-source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh # 要求加入此行 ~/.zshrc
+source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+安装时：
+将以下行添加到你的 .zshrc 文件 *末尾* 以启用语法高亮。
+
+source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 ```
 
 ### 配置 zsh shell
@@ -186,6 +203,13 @@ your .bashrc file:
 	source /usr/local/share/bash-completion/bash_completion.sh
 
 See /usr/local/share/doc/bash-completion/README.md for more information.
+安装时：
+要启用 bash 补全库，请将以下内容添加到你的 .bashrc 文件中：
+
+[[ $PS1 && -f /usr/local/share/bash-completion/bash_completion.sh ]] && \
+	source /usr/local/share/bash-completion/bash_completion.sh
+
+有关更多信息，请参见 /usr/local/share/doc/bash-completion/README.md。
 ```
 
 ### 配置 bash
