--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -47,8 +47,8 @@ NetBSD 可以使用常见的桌面，如 KDE 4、GNOME。
 目前没有 kde5。
 
 ```sh
-# pkgin install readline  libcups# 换源 9.0_2023Q2
-# pkgin install kde4 hal  noto-cjk-fonts # 使用源 9.0_current，提示缺少依赖不用管，已经安装了，输入 y 回车即可
+# pkgin install readline  libcups 
+# pkgin install kde4 hal  noto-cjk-fonts 
 # cp /usr/pkg/share/examples/rc.d/* /etc/rc.d
 # echo kdm=YES >> /etc/rc.conf
 # echo hal=YES >> /etc/rc.conf
